--- a/src/main/java/view/PolynomialCalculator.form
+++ b/src/main/java/view/PolynomialCalculator.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.PolynomialCalculator">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -22,7 +22,7 @@
       </component>
       <component id="1beb3" class="javax.swing.JButton" binding="multiplicationButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="25"/>
             <preferred-size width="150" height="25"/>
             <maximum-size width="150" height="25"/>
@@ -34,7 +34,7 @@
       </component>
       <component id="2c279" class="javax.swing.JButton" binding="subtractionButton" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="25"/>
             <preferred-size width="150" height="25"/>
             <maximum-size width="150" height="25"/>
@@ -46,7 +46,7 @@
       </component>
       <component id="db1b4" class="javax.swing.JButton" binding="additionButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="25"/>
             <preferred-size width="150" height="25"/>
             <maximum-size width="150" height="25"/>
@@ -58,7 +58,7 @@
       </component>
       <component id="734e0" class="javax.swing.JButton" binding="divisionButton" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="25"/>
             <preferred-size width="150" height="25"/>
             <maximum-size width="150" height="25"/>
@@ -101,6 +101,54 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="3912" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="25"/>
+            <preferred-size width="150" height="25"/>
+            <maximum-size width="150" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Result:"/>
+        </properties>
+      </component>
+      <component id="ef4dd" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="25"/>
+            <preferred-size width="150" height="25"/>
+            <maximum-size width="150" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="f3c14" class="javax.swing.JButton" binding="derrivationButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="25"/>
+            <preferred-size width="150" height="25"/>
+            <maximum-size width="150" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Derrivation"/>
+        </properties>
+      </component>
+      <component id="32e4c" class="javax.swing.JButton" binding="integrationButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="25"/>
+            <preferred-size width="150" height="25"/>
+            <maximum-size width="150" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Integration"/>
+        </properties>
       </component>
     </children>
   </grid>
