--- a/src/main/java/view/PolynomialCalculator.form
+++ b/src/main/java/view/PolynomialCalculator.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.PolynomialCalculator">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="true" same-size-vertically="true" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="314" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -17,6 +17,8 @@
           </grid>
         </constraints>
         <properties>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
           <text value="First Polynomial:"/>
         </properties>
       </component>
@@ -77,6 +79,8 @@
           </grid>
         </constraints>
         <properties>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
           <text value="Second Polynomial:"/>
         </properties>
       </component>
@@ -111,6 +115,8 @@
           </grid>
         </constraints>
         <properties>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
           <text value="Result:"/>
         </properties>
       </component>
