--- a/src/main/java/view/PolynomialCalculator.form
+++ b/src/main/java/view/PolynomialCalculator.form
@@ -122,7 +122,7 @@
           <text value="Rezultat:"/>
         </properties>
       </component>
-      <component id="f3c14" class="javax.swing.JButton" binding="derrivationButton" default-binding="true">
+      <component id="f3c14" class="javax.swing.JButton" binding="derivationButton">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="25"/>
@@ -131,7 +131,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="Derrivation"/>
+          <text value="Derivation"/>
         </properties>
       </component>
       <component id="32e4c" class="javax.swing.JButton" binding="integrationButton" default-binding="true">
